--- a/spring-mongo/src/main/resources/application.properties
+++ b/spring-mongo/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 
-spring.data.mongodb.database=restful_api
-spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.database=linkshortener
+spring.data.mongodb.uri=mongodb://localhost/27017
