update 7 - auth works properly

--- a/spring-mongo/src/main/resources/application.properties
+++ b/spring-mongo/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 
 spring.data.mongodb.database=linkshortener
 spring.data.mongodb.uri=mongodb://localhost/27017
+
+# App Properties
+linkshortener.app.jwtSecret= ======================LinkShortener=Spring===========================
+linkshortener.app.jwtExpirationMs= 86400000
+
