--- a/spring-mongo/pom.xml
+++ b/spring-mongo/pom.xml
@@ -76,6 +76,10 @@
             <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+        </dependency>
 
 
     </dependencies>
