update 9 - mail service preparing

--- a/spring-mongo/src/main/resources/application.properties
+++ b/spring-mongo/src/main/resources/application.properties
@@ -4,5 +4,14 @@ spring.data.mongodb.uri=mongodb://localhost/27017
 
 # App Properties
 linkshortener.app.jwtSecret= ======================LinkShortener=Spring===========================
+linkshortener.app.jwtMailSecret= ======================LinkShortenerMail=Spring===========================
 linkshortener.app.jwtExpirationMs= 86400000
+linkshortener.app.url= http://localhost/8080
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=linkshortenerproject@gmail.com
+spring.mail.password=emvtlmpvddmjflwx
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
