update 10 - mail service preparing

--- a/spring-mongo/pom.xml
+++ b/spring-mongo/pom.xml
@@ -93,6 +93,12 @@
             <version>2.1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.eclipse.angus</groupId>
+            <artifactId>jakarta.mail</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
