update 11 - verification process works

--- a/spring-mongo/src/main/resources/application.properties
+++ b/spring-mongo/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.data.mongodb.uri=mongodb://localhost/27017
 linkshortener.app.jwtSecret= ======================LinkShortener=Spring===========================
 linkshortener.app.jwtMailSecret= ======================LinkShortenerMail=Spring===========================
 linkshortener.app.jwtExpirationMs= 86400000
-linkshortener.app.url= http://localhost/8080
+linkshortener.app.url= http://localhost:8080
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
