update 12 - password reset process works

--- a/spring-mongo/src/main/resources/application.properties
+++ b/spring-mongo/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.data.mongodb.uri=mongodb://localhost/27017
 # App Properties
 linkshortener.app.jwtSecret= ======================LinkShortener=Spring===========================
 linkshortener.app.jwtMailSecret= ======================LinkShortenerMail=Spring===========================
+linkshortener.app.jwtResetPasswordSecret= ======================LinkShortenerResetPassword=Spring===========================
 linkshortener.app.jwtExpirationMs= 86400000
 linkshortener.app.url= http://localhost:8080
 
